<resources>
    <string name="app_name">InvestmentIdeas</string>
    <string name="topstock">Top Stocks</string>
    <string name="explorer">Explore opportunities</string>
    <string name="textview">TextView</string>
    <string name="overview">Overview</string>
    <string name="ticker_code">Ticker code</string>
    <string name="company_name">Company Name</string>
    <string name="sector">Sector</string>
    <string name="sub_sector">Sub Sector</string>
    <string name="year">Year:</string>
    <string name="revenue">revenue:</string>
    <string name="net_income">net inc.:</string>
    <string name="_2016">2016</string>
    <string name="rev2016">rev2016</string>
    <string name="net2016">net2016</string>
    <string name="_2017">2017</string>
    <string name="rev2017">rev2017</string>
    <string name="net2017">net2017</string>
    <string name="_2018">2018</string>
    <string name="rev2018">rev2018</string>
    <string name="net2018">net2018</string>
    <string name="_2019">2019</string>
    <string name="rev2019">rev2019</string>
    <string name="net2019">net2019</string>
    <string name="_2020">2020</string>
    <string name="rev2020">rev2020</string>
    <string name="net2020">net2020</string>
    <string name="links">Links:</string>
    <string name="https_finance_yahoo_com_quote_note_st_profile_p_note_st">https://finance.yahoo.com/quote/NOTE.ST/profile?p=NOTE.ST</string>
    <string name="Technology">Technology</string>
    <string name="Health_Care">Health Care</string>
    <string name="real_estate">Real Estate</string>
    <string name="financial_services">Financial Services</string>
    <string name="consumer_cyclical">Consumer cyclical</string>
    <string name="basic_materials">Basic materials</string>
    <string name="consumer_defensive">Consumer defensive</string>
    <string name="utilities">Utilities</string>
    <string name="communications_services">Communications Services</string>
    <string name="energy">Energy</string>
    <string name="industrials">Industrials</string>
</resources>
